# ComputerVision

./: .gitignore  README.md
Homework1/: CMakeLists.txt  Homework1.cpp  Homework1.h  Program.cpp
Homework2/: CMakeLists.txt  Homework2.cpp  Homework2.h  Program.cpp  report.md
Homework3/: .gitignore  CMakeLists.txt  Canny.cpp  Canny.h  Homework3.cpp  Homework3.h  Program.cpp  Utils.cpp  Utils.h  report.md
Homework4/: Canny.cpp  Homework4.cpp  Homework4.h  Matrix.cpp  Program.cpp  Transform.cpp  Transform.h  Utils.cpp  Utils.h  report.md
Homework5/: CMakeLists.txt  DataReader.cpp  DataReader.h  main.cpp
Homework5/data_for_final/: info.xlsx
Homework5/report/: README.md
HomeworkFinal/: CMakeLists.txt  Canny.cpp  Canny.h  Hough.cpp  Hough.h  Matrix.h  Shared.h  Transform.cpp  Transform.h  UFS.cpp  UFS.h  Utils.cpp  Utils.h  main.cpp  report.md
HomeworkFinal/CImg/: README.txt
